--- a/src/main/resources/templates/zhifou_main.html
+++ b/src/main/resources/templates/zhifou_main.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="/css/allPages.css">
-    <link rel="stylesheet" href="/css/main_page.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="../static/css/allPages.css">
+    <link rel="stylesheet" href="../static/css/main_page.css">
+    <link rel="stylesheet" href="//stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <title>知否——有问题上知否</title>
 </head>
-<body onload="getAllInformation()">
+<body onload="getInformation('firstLoad')">
 <!--解决bootstrap的弹窗出现之后滚动条消失，页面横移问题-->
 <div>
     <div class="page-container-fixed-shadow"></div>
@@ -22,7 +22,7 @@
             <div class="d-flex justify-content-between">
                 <div>
                     <div class="page-header-logo">
-                        <img src="/img/zhifou.png" width="140" height="40" alt="">
+                        <img src="../static/img/zhifou.png" width="140" height="40" alt="">
                     </div>
 
                     <div class="d-inline-block">
@@ -70,17 +70,29 @@
     <div class="d-flex">
         <div class="page-card-columns" >
             <div>
-                <button class="page-header-nav-under" onclick="location='zhifou_main.html'" style="color: #1f8dfb;border: 1px solid #1f8dfb;outline: none;">
+                <button class="page-header-nav-under" onclick="getInformation('firstLoad')" style="color: #1f8dfb;border: 1px solid #1f8dfb;outline: none;" id="nav_recommend">
                     <span>首页推荐</span>
                 </button>
-                <button class="page-header-nav-under" onclick="location='zhifou_main.html'" style="outline: none">
+                <button class="page-header-nav-under" onclick="navOperation('displayMyFocus',this.id)" style="outline: none" id="nav_focus">
                     <span>我的关注</span>
                 </button>
-                <button class="page-header-nav-under" onclick="location='zhifou_main.html'" style="outline: none">
+                <button class="page-header-nav-under" onclick="navOperation('displayNewQuestions',null)" style="outline: none" id="nav_questions">
                     <span>最新提问</span>
                 </button>
             </div>
-            <div id="pageCardContainer"></div>
+            <div>
+                <div class="page-card" onclick="getInformation('moreLoad')" style="display: none;text-align: center;color: #8590a6;cursor: pointer" id="pageCardMore">
+                    <div class="page-card-more">
+                        <span>查看更多推荐</span>
+                        <i class="fa fa-angle-down" aria-hidden="true"></i>
+                    </div>
+                </div>
+                <div class="page-card" style="display: none;text-align: center;color: #8590a6" id="noFocusTip">
+                    <div class="page-card-more">
+                        <span>您暂时还没有关注，快关注以下推荐内容吧！</span>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <!--        遗留问题右边宽度，自适应问题, flex-fill无效了-->
@@ -222,12 +234,12 @@
 </div>
 
 <!--    使用fontawesome-->
-<script src="/script/fontawesome.js"></script>
-<script type="text/javascript" src="/script/main_page.js"></script>
+<script src="../static/script/fontawesome.js"></script>
+<script type="text/javascript" src="../static/script/main_page.js"></script>
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<script src="//code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="//stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
