--- a/src/main/resources/static/css/main_page.css
+++ b/src/main/resources/static/css/main_page.css
@@ -172,6 +172,15 @@
     box-shadow: 0 0 12px 0 rgba(0,0,0,0.15);
 }
 
+.page-card-tips{
+    width: 680px;
+    margin-top: 16px;
+    padding: 15px 20px;
+    border-radius: 15px;
+    background-color: #ffffff;
+    box-shadow: 0 0 12px 0 rgba(0,0,0,0.15);
+}
+
 .page-card-title{
     font-size: 18px;
     font-weight: bold;
