--- a/src/main/resources/templates/zhifou_main.html
+++ b/src/main/resources/templates/zhifou_main.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="../static/css/allPages.css">
-    <link rel="stylesheet" href="../static/css/main_page.css">
+    <link rel="stylesheet" href="/css/allPages.css">
+    <link rel="stylesheet" href="/css/main_page.css">
     <link rel="stylesheet" href="//stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <title>知否——有问题上知否</title>
@@ -22,7 +22,7 @@
             <div class="d-flex justify-content-between">
                 <div>
                     <div class="page-header-logo">
-                        <img src="../static/img/zhifou.png" width="140" height="40" alt="">
+                        <img src="/img/zhifou.png" width="140" height="40" alt="">
                     </div>
 
                     <div class="d-inline-block">
@@ -73,7 +73,7 @@
                 <button class="page-header-nav-under" onclick="getInformation('firstLoad')" style="color: #1f8dfb;border: 1px solid #1f8dfb;outline: none;" id="nav_recommend">
                     <span>首页推荐</span>
                 </button>
-                <button class="page-header-nav-under" onclick="navOperation('displayMyFocus',this.id)" style="outline: none" id="nav_focus">
+                <button class="page-header-nav-under" onclick="navOperation('displayMyFocus',null)" style="outline: none" id="nav_focus">
                     <span>我的关注</span>
                 </button>
                 <button class="page-header-nav-under" onclick="navOperation('displayNewQuestions',null)" style="outline: none" id="nav_questions">
@@ -81,17 +81,7 @@
                 </button>
             </div>
             <div>
-                <div class="page-card" onclick="getInformation('moreLoad')" style="display: none;text-align: center;color: #8590a6;cursor: pointer" id="pageCardMore">
-                    <div class="page-card-more">
-                        <span>查看更多推荐</span>
-                        <i class="fa fa-angle-down" aria-hidden="true"></i>
-                    </div>
-                </div>
-                <div class="page-card" style="display: none;text-align: center;color: #8590a6" id="noFocusTip">
-                    <div class="page-card-more">
-                        <span>您暂时还没有关注，快关注以下推荐内容吧！</span>
-                    </div>
-                </div>
+                <div class="useToInsert" style="width: 680px"></div>
             </div>
         </div>
 
@@ -234,8 +224,8 @@
 </div>
 
 <!--    使用fontawesome-->
-<script src="../static/script/fontawesome.js"></script>
-<script type="text/javascript" src="../static/script/main_page.js"></script>
+<script src="/script/fontawesome.js"></script>
+<script type="text/javascript" src="/script/main_page.js"></script>
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <script src="//code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
