--- a/src/main/resources/templates/zhifou_more.html
+++ b/src/main/resources/templates/zhifou_more.html
@@ -3,8 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        .body{
+            width: 100%;
+            color: #484848;
+            text-align: center;
+        }
+
+        .test{
+            width: 680px;
+            margin: 0 auto;
+            padding: 20px;
+            border-radius: 15px;
+            background-color: #ffffff;
+            box-shadow: 0 0 12px 0 rgba(0,0,0,0.5);
+        }
+    </style>
 </head>
 <body>
 
+<div class="body">
+    <h1>测试内容:</h1>
+    <div class="test">
+<!-- 这里放测试内容-->
+
+
+
+    </div>
+</div>
 </body>
 </html>
