--- a/src/main/resources/static/css/main_page.css
+++ b/src/main/resources/static/css/main_page.css
@@ -1,10 +1,12 @@
 .page-container-header{
     margin: 0 auto;
-    max-width: 960px;
+    width: 1280px;
     /*width: 100%;*/
     /*!*position: fixed;*!*/
     background-color: #ffffff;
-    box-shadow: 0 2px 12px 0 rgba(0,0,0,0.15)
+    padding-left: 15px;
+    padding-right: 15px;
+    /*box-shadow: 0 2px 12px 0 rgba(0,0,0,0.15)*/
 }
 
 .page-container{
@@ -15,31 +17,23 @@
     padding-right: 15px;
 }
 
-.page-container-fixed{
-    position: fixed;
-    padding-left: 15px;
-    padding-right: 15px;
-}
-
-.page-container-fixed-shadow{
-    position: fixed;
-    width: 100%;
-    height: 62px;
-    background-color: #ffffff;
-    box-shadow: 0 2px 12px 0 rgba(0,0,0,0.15)
-}
-
 .page-header-logo{
     display: inline-block;
     vertical-align: middle;
     padding-top: 10px;
     padding-bottom: 10px;
-    padding-right: 15px;
+    padding-right: 30px;
 }
 
 .page-header-search{
     margin: 0 auto;
-    max-width: 930px;
+    max-width: 924px;
+}
+
+@keyframes searchBar {
+    to{
+
+    }
 }
 
 .page-header-personalInfo{
@@ -103,6 +97,7 @@
 }
 
 .page-header-nav-button{
+    display: inline-block;
     padding: 14px 14px 20px 14px;
     text-align: center;
     font-size: 16px;
@@ -130,7 +125,6 @@
 
 .page-header-nav-under:hover{
     color: #1f8dfb;
-    border: 1px solid #1f8dfb;
 }
 
 .page-header-nav-right{
@@ -146,6 +140,16 @@
 .page-card-columns{
     padding-top: 2px;
     padding-bottom: 10px;
+}
+
+.page-header-nav-press{
+    padding: 8px 20px;
+    background-color: transparent;
+    font-size: 14px;
+    font-weight: bold;
+    color: #1f8dfb;
+    border: 1px solid #1f8dfb;
+    border-radius: 25px 25px;
 }
 
 .page-right-part{
