--- a/src/main/resources/templates/zhifou_main.html
+++ b/src/main/resources/templates/zhifou_main.html
@@ -5,8 +5,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+<!--    使用iconfont-->
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_1258904_bf6001s43ig.css">
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="/css/allPages.css">
+    <link rel="stylesheet" href="/css/public.css">
     <link rel="stylesheet" href="/css/main_page.css">
     <link rel="stylesheet" href="//stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
@@ -19,21 +21,31 @@
             <div class="d-flex justify-content-between">
                 <div>
                     <div class="page-header-logo">
-                        <img src="../static/img/zhifou.png" width="140" height="40" alt="">
+                        <img src="/img/zhifou.png" width="140" height="40" alt="">
                     </div>
 
-                    <div class="d-inline-block">
+                    <div class="d-inline-block" style="vertical-align: top">
                         <a href="zhifou_main.html" class="page-header-nav">
-                            <span style="color: #1f8dfb">首页</span>
+                            <div style="display: flex;align-items: center;height: 100%">
+                                <span style="color: #1f8dfb;font-size: 16px">首页</span>
+                            </div>
                         </a>
                         <a href="zhifou_discovery.html" class="page-header-nav">
-                            <span>发现</span>
+                            <div style="display: flex;align-items: center;height: 100%">
+                                <span style="font-size: 16px">发现</span>
+                            </div>
                         </a>
                         <a href="zhifou_specialColumn.html" class="page-header-nav">
-                            <span>专栏</span>
+                            <div style="display: flex;align-items: center;height: 100%">
+                                <span style="font-size: 16px">专栏</span>
+                            </div>
                         </a>
                         <a href="zhifou_more.html" class="page-header-nav">
-                            <span>更多 </span><i class="fa fa-angle-down" aria-hidden="true"></i>
+                            <div style="display: flex;align-items: center;height: 100%">
+                                <div style="font-size: 16px">
+                                    <span>更多 </span><span class="iconfont icon-xia"></span>
+                                </div>
+                            </div>
                         </a>
                     </div>
                 </div>
@@ -41,23 +53,69 @@
                     <div class="page-header-nav-button" onclick="displayWholeSearch()" id="pageHeaderSearch"
                          style="color: #8590a6;border-top: 4px solid transparent;
                                 border-left: 1px solid transparent;border-right: 1px solid transparent;">
-                        <i class="fas fa-search" style="font-size: 16px"></i>
-                        <span>搜索</span>
+                        <div style="display: flex;align-items: center;height: 100%">
+                            <div style="font-size: 16px">
+                                <span class="iconfont icon-sousuo"></span>
+                                <span>搜索</span>
+                            </div>
+                        </div>
                     </div>
-                    <button class="page-header-nav" type="button" data-toggle="modal" data-target="#questionModal"
-                            style="outline: none;border-bottom: none">
-                        <i class="fas fa-question" style="font-size: 16px"></i>
-                        <span>提问</span>
-                    </button>
+                    <div class="page-header-nav-button" data-toggle="modal" data-target="#questionModal"
+                            style="color: #8590a6;border-top: 4px solid transparent;
+                                border-left: 1px solid transparent;border-right: 1px solid transparent;">
+                        <div style="display: flex;align-items: center;height: 100%">
+                            <div style="font-size: 16px">
+                                <span class="iconfont icon-wenhao"></span>
+                                <span>提问</span>
+                            </div>
+                        </div>
+                    </div>
                     <div class="page-header-nav-button"
                          style="color: #8590a6;border-top: 4px solid transparent;
                      border-left: 1px solid transparent;border-right: 1px solid transparent;">
-                        <i class="fas fa-moon" style="font-size: 20px"></i>
+                        <div style="display: flex;align-items: center;height: 100%">
+                            <span class="iconfont icon-moonbyueliang" style="font-size: 16px;padding-bottom: 2px"></span>
+                        </div>
                     </div>
-                    <div class="page-header-nav-button" onclick="displayStyle('personalInfo','pageHeaderInfo')" id="pageHeaderInfo"
+                    <div class="page-header-nav-button" onclick="displayUser('personalInfo','pageHeaderInfo')" id="pageHeaderInfo"
                          style="color: #8590a6;border-top: 4px solid transparent;
                      border-left: 1px solid transparent;border-right: 1px solid transparent;">
-                        <i class="fas fa-user-circle" style="font-size: 20px"></i>
+                        <div style="display: flex;align-items: center;height: 100%">
+                            <span class="iconfont icon-yonghu2" style="font-size: 20px;padding-bottom: 2px"></span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="d-flex justify-content-end">
+<!--                点击用户头像的控件-->
+                <div class="page-header-personalInfo" style="display: none" id="personalInfo">
+                    <div style="padding-top: 10px;margin-top: -5px">
+                        <div class="page-personalInfo" style="margin: 0 auto">
+                            <div class="page-personalInfo-items">
+                                <div class="d-inline-block align-middle">
+                                    <span class="iconfont icon-yonghu" style="line-height: 14px"></span>
+                                </div>
+                                <div class="d-inline-block align-middle">
+                                    <span style="padding-left: 5px">我的主页</span>
+                                </div>
+                            </div>
+                            <div class="page-personalInfo-items">
+                                <div class="d-inline-block align-middle">
+                                    <span class="iconfont icon-icon_set_up" style="line-height: 14px"></span>
+                                </div>
+                                <div class="d-inline-block align-middle">
+                                    <span style="padding-left: 5px">设置</span>
+                                </div>
+                            </div>
+                            <div class="page-personalInfo-items">
+                                <div class="d-inline-block align-middle">
+                                    <span class="iconfont icon-tuichu" style="line-height: 14px"></span>
+                                </div>
+                                <div class="d-inline-block align-middle">
+                                    <span style="padding-left: 5px">退出</span>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -93,54 +151,82 @@
                 <div style="text-align: center">
                     <div class="page-header-nav-right">
                         <div class="d-inline-block align-middle">
-                            <i class="far fa-edit" style="font-size: 18px"></i>
+                            <span class="iconfont icon-shuxie" style="font-size: 22px;line-height: 22px"></span>
                         </div>
-                        <span style="font-weight: bold">写文章</span>
+                        <div class="d-inline-block align-middle" style="font-weight: bold">
+                            <span>写文章</span>
+                        </div>
+
                     </div>
                     <div class="page-header-nav-right">
                         <div class="d-inline-block align-middle">
-                            <i class="far fa-lightbulb" style="font-size: 18px"></i>
+                            <span class="iconfont icon-dengpao" style="font-size: 22px;line-height: 22px"></span>
                         </div>
-                        <span style="font-weight: bold">写想法</span>
+                        <div class="d-inline-block align-middle" style="font-weight: bold">
+                            <span>写想法</span>
+                        </div>
                     </div>
                 </div>
                 <div class="page-right-card-info">
                     <div class="page-right-card-info-items">
                         <div class="d-inline-block align-middle">
-                            <i class="fa fa-bell" aria-hidden="true"></i>
+                            <span class="iconfont icon-tongzhi" style="line-height: 16px"></span>
                         </div>
                         <span style="padding-left: 5px">查看全部通知</span>
                     </div>
                     <div class="page-right-card-info-items">
                         <div class="d-inline-block align-middle">
-                            <i class="fa fa-comment" aria-hidden="true"></i>
+                            <span class="iconfont icon-xiaoxi" style="line-height: 16px"></span>
                         </div>
                         <span style="padding-left: 5px">我的私信</span>
                     </div>
                     <hr>
                     <div class="page-right-card-info-items">
                         <div class="d-inline-block align-middle">
-                            <i class="fas fa-book-reader" aria-hidden="true"></i>
+                            <span class="iconfont icon-reading" style="font-size: 18px;line-height: 18px"></span>
                         </div>
                         <span style="padding-left: 5px">我的在看</span>
                     </div>
                     <div class="page-right-card-info-items">
                         <div class="d-inline-block align-middle">
-                            <i class="far fa-star" aria-hidden="true"></i>
+                            <span class="iconfont icon-shoucang" style="font-size: 18px;line-height: 18px"></span>
                         </div>
-                        <span style="padding-left: 5px">我收藏的问题</span>
+                        <div class="d-inline-block align-middle">
+                            <span style="padding-left: 5px">我收藏的问题</span>
+                        </div>
                     </div>
                     <div class="page-right-card-info-items">
                         <div class="d-inline-block align-middle">
-                            <i class="far fa-share-square" aria-hidden="true"></i>
+                            <span class="iconfont icon-fenxiang" style="font-size: 18px;line-height: 18px"></span>
                         </div>
-                        <span style="padding-left: 5px">我的分享</span>
+                        <div class="d-inline-block align-middle">
+                            <span style="padding-left: 5px">我的分享</span>
+                        </div>
                     </div>
                     <div class="page-right-card-info-items">
                         <div class="d-inline-block align-middle">
-                            <i class="far fa-comment-dots"></i>
+                            <span class="iconfont icon-pinglun" style="line-height: 16px"></span>
                         </div>
-                        <span style="padding-left: 5px">我的评论</span>
+                        <div class="d-inline-block align-middle">
+                            <span style="padding-left: 5px">我的评论</span>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="page-right-card-info-items">
+                        <div class="d-inline-block align-middle">
+                            <span class="iconfont icon-lishijilu" style="line-height: 16px"></span>
+                        </div>
+                        <div class="d-inline-block align-middle">
+                            <span style="padding-left: 5px">我的足迹</span>
+                        </div>
+                    </div>
+                    <div class="page-right-card-info-items">
+                        <div class="d-inline-block align-middle">
+                            <span class="iconfont icon-sousuo" style="line-height: 16px"></span>
+                        </div>
+                        <div class="d-inline-block align-middle">
+                            <span style="padding-left: 5px">我的搜索历史</span>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -161,7 +247,7 @@
                                 <input class="page-search-input" type="text" placeholder="请输入你要查找的内容" maxlength="20" id="page_search_input">
                             </div>
                             <div>
-                                <input class="page-search-button" type="button" value="搜索" onclick="navOperation('pageSearch',null)">
+                                <input class="page-search-button" type="button" value="搜索" onclick="pageSearch()">
                             </div>
                         </div>
                     </div>
@@ -193,40 +279,6 @@
     </div>
 </div>
 
-<!--右侧个人头像点击控件-->
-<div class="page-header-personalInfo" style="display: none" id="personalInfo">
-    <div style="position: absolute;top: 62px">
-        <div style="position: fixed;width: 930px">
-            <div class="d-flex justify-content-end">
-                <div style="position: absolute;padding-top: 10px;margin-top: -5px">
-                    <div class="page-personalInfo">
-                        <div class="page-personalInfo-items">
-                            <div class="d-inline-block align-middle">
-                                <i class="fa fa-user" aria-hidden="true"></i>
-                            </div>
-                            <span style="padding-left: 5px">我的主页</span>
-                        </div>
-                        <div class="page-personalInfo-items">
-                            <div class="d-inline-block align-middle">
-                                <i class="fa fa-cog" aria-hidden="true"></i>
-                            </div>
-                            <span style="padding-left: 5px">设置</span>
-                        </div>
-                        <div class="page-personalInfo-items">
-                            <div class="d-inline-block align-middle">
-                                <i class="fa fa-power-off" aria-hidden="true"></i>
-                            </div>
-                            <span style="padding-left: 5px">退出</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-
-<!--    使用fontawesome-->
-<script src="/script/fontawesome.js"></script>
 <script type="text/javascript" src="/script/public.js"></script>
 <script type="text/javascript" src="/script/main_page.js"></script>
 <!-- Optional JavaScript -->
