--- a/src/main/resources/templates/zhifou_question.html
+++ b/src/main/resources/templates/zhifou_question.html
@@ -9,8 +9,8 @@
     <!--    使用iconfont-->
     <link rel="stylesheet" href="//at.alicdn.com/t/font_1258904_bf6001s43ig.css">
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="../static/css/public.css">
-    <link rel="stylesheet" href="../static/css/question_page.css">
+    <link rel="stylesheet" href="/css/public.css">
+    <link rel="stylesheet" href="/css/question_page.css">
     <link rel="stylesheet" href="//stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <title>知否——有问题上知否</title>
@@ -22,7 +22,7 @@
             <div class="d-flex justify-content-between">
                 <div>
                     <div class="page-header-logo">
-                        <img src="../static/img/zhifou.png" width="140" height="40" alt="">
+                        <img src="/img/zhifou.png" width="140" height="40" alt="">
                     </div>
 
                     <div class="d-inline-block" style="vertical-align: top">
@@ -274,8 +274,8 @@
     </div>
 </div>
 
-<script type="text/javascript" src="../static/script/public.js"></script>
-<script type="text/javascript" src="../static/script/question_page.js"></script>
+<script type="text/javascript" src="/script/public.js"></script>
+<script type="text/javascript" src="/script/question_page.js"></script>
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <script src="//code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
