--- a/src/main/resources/static/css/public.css
+++ b/src/main/resources/static/css/public.css
@@ -18,7 +18,7 @@ nav{
 @font-face {
     font-family: first font;
     /*src: url("../font/PingFang Medium.ttf");*/
-    src: url("../font/PingFang Medium.ttf");
+    src: url("/font/PingFang Medium.ttf");
 }
 
 a{
