--- a/src/main/resources/static/css/question_page.css
+++ b/src/main/resources/static/css/question_page.css
@@ -3,7 +3,6 @@ hr{
 }
 
 .question-container{
-    width: 100%;
     box-shadow: 0 0 12px 0 rgba(0,0,0,0.15);
 }
 
@@ -11,23 +10,20 @@ hr{
     display: flex;
     justify-content: space-between;
     margin: 0 auto;
-    width: 960px;
+    color: #1a1a1a;
+    width: 920px;
     padding: 20px;
 }
 
 .question-title{
-    font-size: 18px;
+    font-size: 22px;
     font-weight: bold;
-    padding-top: 10px;
-    padding-bottom: 0;
-    color: #484848;
 }
 
 .question-description{
     font-size: 15px;
     padding-top: 10px;
     padding-bottom: 10px;
-    color: #5b5b5b;
 }
 
 .question-info-bottom{
@@ -84,13 +80,47 @@ hr{
 .question-right-author{
     padding: 10px 25px;
     border-radius: 15px;
+    color: #1a1a1a;
     background-color: #ffffff;
     box-shadow: 0 2px 12px 0 rgba(0,0,0,0.15);
 }
 
+.about-author{
+    padding-top: 5px;
+    padding-bottom: 15px;
+}
+
+.about-author-info{
+    display: table;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+.about-author-img{
+    width: 60px;
+    height: 60px;
+    border-radius: 50% 50%;
+    border: 1px solid #ff5c5c;
+}
+
+.about-author-name{
+    font-size: 20px;
+}
+
+.about-author-description{
+    height: 45px;
+    white-space: normal;
+    word-wrap: break-word;
+    word-break: break-all;
+    font-size: 14px;
+    padding-bottom: 5px;
+}
+
 .answer-card{
     width: 680px;
+    margin-bottom: 16px;
     padding: 15px 20px;
+    color: #1a1a1a;
     border-radius: 15px;
     background-color: #ffffff;
     box-shadow: 0 0 12px 0 rgba(0,0,0,0.15);
@@ -98,30 +128,26 @@ hr{
 
 .answer-card-author{
     font-size: 15px;
-    padding-bottom: 10px;
 }
 
 .answer-card-author-img{
-    width: 64px;
-    height: 64px;
+    width: 48px;
+    height: 48px;
     border: 1px solid #ff5c5c;
     border-radius: 50% 50%;
 }
 
 .author-info{
     display: inline-block;
-    vertical-align: top;
+    vertical-align: middle;
     padding-left: 10px;
 }
 
 .author-name{
-    padding: 5px;
     font-size: 15px;
-    color: #484848
 }
 
 .author-description{
-    padding: 5px;
     font-size: 14px;
     color: #5b5b5b;
 }
@@ -129,15 +155,44 @@ hr{
 .answer-star{
     font-size: 14px;
     color: #8590a6;
-    padding-top: 10px;
+    padding-top: 5px;
     padding-bottom: 5px;
 }
 
 .answer-description{
+    position: relative;
+    overflow: hidden;
     font-size: 15px;
-    color: #484848;
     padding-top: 10px;
-    padding-bottom: 10px;
+}
+
+.answer-shadow{
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 100px;
+    text-align: center;
+    background: linear-gradient(to bottom,  rgba(255,255,255,0),rgba(255,255,255,0.8), rgba(255,255,255,1));
+}
+
+.answer-shadow-text{
+    line-height: 150px;
+    color: #1f8dfb;
+    cursor: pointer;
+}
+
+.answer-shadow-text:hover{
+    text-decoration: underline!important
+}
+
+.answer-time{
+    padding-top: 5px;
+    font-size: 14px;
+    color: #8590a6;
+}
+
+.question-card-bottom{
+    padding-top: 10px;
 }
 
 .page-card-bottom-reader{
@@ -167,3 +222,51 @@ hr{
 .page-card-bottom-item:hover{
     color: #656d7d;
 }
+
+.page-card-bottom-pickup-answer{
+    font-size: 14px;
+    color: #1f8dfb;
+    margin: 0 10px;
+    cursor: pointer;
+}
+
+.page-card-bottom-pickup-answer:hover{
+    text-decoration: underline!important
+}
+
+.question-num-info{
+    display: inline-block;
+    padding-left: 10px;
+    padding-right: 10px;
+    text-align: center;
+}
+
+.question-follower{
+    font-size:14px;
+    color: #8590a6;
+}
+
+.question-follower-num{
+    font-size:18px;
+    font-weight: bold;
+    color: #ff5c5c;
+}
+
+.question-card-tips{
+    width: 680px;
+    margin-top: 16px;
+    padding: 15px 20px;
+    text-align: center;
+    color: #8590a6;
+    cursor: pointer;
+    border-radius: 15px;
+    background-color: #ffffff;
+    box-shadow: 0 0 12px 0 rgba(0,0,0,0.15);
+}
+
+.answer-card-more{
+    width: 100%;
+    text-align: center;
+    font-size: 15px;
+}
+
