--- a/src/main/resources/templates/zhifou_main.html
+++ b/src/main/resources/templates/zhifou_main.html
@@ -22,7 +22,7 @@
             <div class="d-flex justify-content-between">
                 <div>
                     <div class="page-header-logo">
-                        <img src="../static/img/zhifou.png" width="140" height="40" alt="">
+                        <img src="/img/zhifou.png" width="140" height="40" alt="">
                     </div>
 
                     <div class="d-inline-block" style="vertical-align: top">
